# VideoCDN

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  request.py  setup.cfg
models/: content.py  translation.py
params/: __init__.py
type/: field.py  ordering.py
videocdn/: main.py
videocdn/params/: content.py  episode.py  season.py
videocdn/type/: direction.py
videocdn_tv/: __init__.py  exception.py  link.py  main.py  request.py
videocdn_tv/models/: base.py  content.py  episodes.py  response.py  seasons.py  translation.py
videocdn_tv/models/api/: __init__.py  anime.py  anime_tv_series.py  base_api.py  movie.py  show_tv_series.py  translations.py  tv_series.py
videocdn_tv/models/contents/: __init__.py  episode.py  media.py  qualitie.py  translation.py
videocdn_tv/models/episodes/: __init__.py
videocdn_tv/models/seasons/: __init__.py
videocdn_tv/params/: __init__.py  base.py  content.py  episode.py  season.py
videocdn_tv/type/: direction.py  field.py  ordering.py
