[tool.poetry]
name = "videocdn_tv"
version = "0.1.3"
description = "Реализация Api для сервиса VideoCDN.tv"
authors = ["Your Name <you@example.com>"]
repository = 'https://github.com/odi1n/VideoCDN'
readme = 'README.md'
keywords = ['text']

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.2"
requests = "2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
