[tool.poetry]
name = "videocdn_tv"
version = "0.2.1"
description = "Реализация Api для сервиса VideoCDN.tv"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/odi1n/VideoCDN'
documentation = "https://github.com/odi1n/VideoCDN/blob/master/README.md"
keywords = ['videocdn', 'videocdn-tv']

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.2"
httpx = "^0.23.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.autoflake]
check = false
imports = ["fastapi", "requests", "pydantic"]

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["migrations"]
skip = ["migrations"]
known_fastapi = ["fastapi", "pydantic", "pyrogram"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]